# mysql-audit

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile.am  README.md  README.txt  THIRDPARTY.txt  bintray_upload.sh  compiling.txt  configure.ac  index.html  params.json  plugin-name.txt
.github/: CODEOWNERS
config/: ac_mysql.m4
include/: audit_handler.h  hot_patch.h  md5.h  mysql_inc.h  static_assert.h
offset-extract/: offset-extract.sh
src/: Makefile.am  MariadbPlugin.map  MySQLPlugin.map  audit_handler.cc  audit_offsets.cc  audit_plugin.cc  hot_patch.cc  md5.cc
udis86/: Makefile.am  VERSION  autogen.sh
udis86/libudis86/: Makefile.am
yajl/: Makefile.am  VERSION
yajl/src/: Makefile.am
